--- a/devTools/html/loaderConfig.html
+++ b/devTools/html/loaderConfig.html
@@ -1,5 +1,5 @@
-<div id="ontando_devTools_loaderConfig" style="height: 1px; position: absolute; left: 0px; right: 0px; top: 0px; z-index: 300; display: block;">
-    <div style="height: 50px; width: 500px; margin: 3px auto;">
+<div id="ontando_devTools_loaderConfig" style="height: 0px; position: absolute; left: 5px; top: 5px; z-index: 300; display: block;">
+    <div style="height: 50px; width: 50px; margin: 3px auto;">
         <div id="ontando_devTools_loaderConfig_button" style="height: 50px; width: 50px; float:left; background-color: #FFFFFF; margin: 0px 5px; border-radius: 15px; padding: 5px 15px 5px 15px;">'
             ???
         </div>
