Improved text rendering

--- a/devTools/html/loaderConfig.html
+++ b/devTools/html/loaderConfig.html
@@ -1,4 +1,4 @@
-<div id="ontando_devTools_loaderConfig" style="height: 0px; width: 300px; position: absolute; left: 5px; top: 5px; z-index: 300; display: block;">
+<div id="ontando_devTools_loaderConfig" style="box-sizing: content-box; height: 0px; width: 300px; position: absolute; left: 5px; top: 5px; z-index: 300; display: block;">
     <div id="ontando_devTools_loaderConfig_config" style="height: 500px; width: 200px; float:left; background-color: #FFFFFF; margin: 0px 5px; border-radius: 15px; padding: 15px;">
 
         <div style="height: 30px; width: 200px; ">
@@ -25,6 +25,7 @@
         </div>
         <hr>
         <button id="ontando_devTools_loaderConfig_config_save">Save all</button>
+        <button id="ontando_devTools_loaderConfig_config_close">Close</button>
 
     </div>
     <div id="ontando_devTools_loaderConfig_button" style="height: 16px; width: 16px; float:left; background-color: #FFFFFF; margin: 0px 5px; border-radius: 15px; padding: 5px 5px 5px 5px;">
